--- a/package.json
+++ b/package.json
@@ -1,12 +1,42 @@
 {
   "name": "json-form-atter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0-beta.1",
+  "description": "JSON schema generator and translator intergrated for forms",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
+    "test": "jest --config jestconfig.json"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "form",
+    "schema",
+    "validation",
+    "json"
+  ],
+  "files": [
+    "lib/**/*"
+  ],
+  "author": {
+    "name": "Erick Fonseca",
+    "email": "erickfons00@gmail.com",
+    "url": "https://github.com/erick-tcsder"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^29.0.3",
+    "jest": "^29.0.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.8.3"
+  }
 }
