--- a/jestconfig.json
+++ b/jestconfig.json
@@ -3,5 +3,5 @@
     "^.+\\.(t|j)sx?$": "ts-jest"
   },
   "testRegex": "(/*.(test|spec))\\.(jsx?|tsx?)$",
-  "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+  "moduleFileExtensions": ["ts", "tsx", "json", "node"]
 }
