--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-schema-form-atter",
+  "name": "schema-json-form-atter",
   "version": "0.0.0-beta.1",
   "description": "JSON schema generator and translator intergrated for forms",
   "main": "lib/index.js",
