--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "type-fest": "^2.19.0",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
